# syli

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE-MIT  README.md  ROADMAP.md  dune-project  setup.sh  syli.opam
.github/workflows/: ci.yml
bench/: clos.sy  clos4.sy  queens.sy  run.sh  tak.sy
compiler/ast_parsing/: alpha_renaming.ml  alpha_renaming.mli  ast.ml  ast.mli  ast_transformer.ml  ast_transformer_acc.ml  ast_transformer_acc.mli  ast_visitor.ml  dune  error_reporting.ml  parser_helpers.ml  pretty_print_ast.ml  pretty_print_code.ml  syli_lexer.mll  syli_parser.mly  syli_post_lex.ml  utils.ml
compiler/ast_typing/: analysis.ml  analysis.mli  ast_transformer.ml  ast_transformer.mli  ast_transformer_acc.ml  ast_transformer_acc.mli  ast_visitor.ml  ast_visitor.mli  dune  env.ml  env.mli  env_printing.ml  infer.ml  infer.mli  infer_helpers.ml  infer_helpers.mli  parse_ty.ml  parse_ty.mli  pretty_print_code.ml  pretty_print_code.mli  record.ml  record.mli  subst.ml  subst.mli  syli_typing.ml  ty.ml  ty.mli  typed_ast.ml  typed_ast.mli
compiler/common/: dune  syli_common.ml
compiler/core/: analysis_helpers.ml  analysis_helpers.mli  ast_transformer_acc.ml  ast_transformer_acc.mli  ast_visitor.ml  ast_visitor.mli  closure_analysis.ml  closure_analysis.mli  core_ast.ml  core_ast.mli  dune  normalize.ml  normalize.mli  pp.ml  syli_core.ml
compiler/helpers/: cyclic_components.ml  dune  graph.ml  graph.mli  helpers.ml
compiler/ir/: builtins.ml  builtins.mli  cfg.ml  cfg.mli  cir.ml  cir.mli  cir_pretty_print.ml  cir_pretty_print.mli  dune  generic_substitution.ml  oir.ml  oir.mli  oir_cfg.ml  oir_cfg.mli  oir_pretty_print.ml  oir_pretty_print.mli  rir.ml  rir.mli  rir_pretty_print.ml  rir_pretty_print.mli  syli_ir.ml
compiler/llvm_lir/: builder.ml  builder.mli  dune  helpers.ml  helpers.mli  llvm_lir.ml  pp.ml  pp.mli  types.ml  types.mli
compiler/middle_end/: closure_dispatch_id.ml  closure_dispatch_id.mli  closure_graph.ml  closure_graph.mli  dune  exec_unit.ml  exec_unit.mli  gen_closure_function.ml  gen_closure_function.mli  helpers.ml  liveness.ml  liveness.mli  lower_ast_to_core.ml  lower_ast_to_core.mli  lower_cir_to_oir.ml  lower_cir_to_oir.mli  lower_core_to_cir.ml  lower_core_to_cir.mli  lower_oir_to_rir.ml  lower_oir_to_rir.mli  middle_end.ml  pass_gc_cycle_insertion.ml  pass_monomorphize.ml  pass_monomorphize.mli  pass_rc_insertion.ml  pipeline.ml  pipeline.mli  pipeline_types.ml
compiler/target_llvm/: dune  gen_llvm.ml  gen_llvm.mli
runtime/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build_all_allocators.sh  compare_allocators.sh  perf.sh  run_bench.sh  run_test.sh
runtime/include/syli/: chunk_vector.h  config.h  gc_helpers.h  header_object.h  immediate.h  object.h  stack_frame.h  syli.h  syli_state.h  task.h
runtime/src/: immediate.c  main.c  stack_frame.c  syli.c  syli_state.c  syli_state_gc_dropping.c  syli_state_gc_releasing.c  syli_state_gc_tracing.c
runtime/tests/: bench_chunk_vect_vs_double_vect.c  bench_chunk_vector.c  bench_gc.c  bench_tracing_graph.c  bench_workload_profile.c  test_chunk_vector.c  test_gc.c  test_gc_tracing_graph.c  test_header_object.c  test_object.c  test_stack_frame.c  test_syli_api.c  test_syli_state.c
test/core/: core_1.t  core_extern_fn.t
test/exec/: exe_1.t  exe_2.t  exe_3.t  setup.sh
test/lexer/: lexer.t
test/llvm/: dune  exec_cli.t  llvm_1.t  llvm_closure_cast.t  llvm_closure_if.t  llvm_closure_object.t  llvm_closure_runtime.t  record_runtime.t  setup.sh  signature_ffi.t
test/parsing/: alpha_1.t  dune  parse_indent.t  parser_1.t  parser_3.t  parser_ffi.t  parser_record.t
test/prog-lang/: closure_as_arg_indirect.t  closure_chain_calls.t  closure_indirection.t  closure_indirection2.t  complex_dispatch.t  composition.t  error_chain_calls.t  ffi.t  free_vars.t  partial_poly.t  partial_poly2.t  partial_poly_ret.t  partial_poly_ret_2.t  partial_poly_ret_z.t  recursive_fn.t
test/sir/: closure_fanout.t  dune  oir_rc.t  sir_1.t  sir_2.t  sir_3.t  sir_4.t  sir_closure_cast.t  sir_closure_mono.t  sir_closure_object.t  sir_free_vars.t  sir_if.t  sir_nested_fn.t  unused_vars.t
test/typing/: dune  typing_1.t  typing_2.t  typing_partial_fn.t  typing_recursive_fn.t
test/unit/: cfg.expected  cfg.ml  closure_analysis.expected  closure_analysis.ml  closure_graph_test.expected  closure_graph_test.ml  collect_closures.expected  collect_closures.ml  cyclic_components.expected  cyclic_components.ml  dune  liveness_test.expected  liveness_test.ml  normalize_core.expected  normalize_core.ml
